重构agent模块；支持精灵在被攻击后做出反应